[NF] add auto questing